# select.rs

./: .gitattributes  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
benches/: benches.rs
examples/: stackoverflow-text-only.rs  stackoverflow.html  stackoverflow.rs
src/: document.rs  dom.rs  lib.rs  node.rs  predicate.rs  selection.rs
tests/: document_tests.rs  dom_tests.rs  node_tests.rs  predicate_tests.rs  selection_tests.rs
tests/fixtures/: struct.Vec.html
