[package]
name = "select"
version = "0.5.0"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
description = "A library to extract useful data from HTML documents, suitable for web scraping."
license = "MIT"
documentation = "https://docs.rs/select"
homepage = "https://github.com/utkarshkukreti/select.rs"
repository = "https://github.com/utkarshkukreti/select.rs"

[dev-dependencies]
speculate = "0.1.2"

[dependencies]
html5ever = "0.25"
bit-set = "0.5"
markup5ever_rcdom = "0.1"
