[package]
name = "select"
version = "0.5.0"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2018"
description = "A library to extract useful data from HTML documents, suitable for web scraping."
license = "MIT"
documentation = "https://docs.rs/select"
homepage = "https://github.com/utkarshkukreti/select.rs"
repository = "https://github.com/utkarshkukreti/select.rs"

[dependencies]
bit-set = "0.5"
html5ever = "0.25"
markup5ever_rcdom = "0.1"

[dev-dependencies]
speculate = "0.1.2"
